# youwish

./: Dockerfile  README.md  app.py  db.json  op.py  pyproject.toml  requirement.txt  requirements.txt
static/: styles.css
templates/: index.html
