[tool.poetry]
name = "youwish"
version = "0.1.0"
description = ""
authors = ["Joacko <joaquinbf@live.com>"]

[tool.poetry.dependencies]
python = "^3.7"
astroid = "2.3.3"
autopep8 = "1.5"
click = "7.1.1"
Flask = "1.1.1"
isort = "4.3.21"
itsdangerous = "1.1.0"
Jinja2 = "2.11.3"
lazy-object-proxy = "1.4.3"
MarkupSafe = "1.1.1"
mccabe = "0.6.1"
pycodestyle = "2.5.0"
pylint = "2.4.4"
six = "1.14.0"
typed-ast = "1.4.1"
Werkzeug = "1.0.0"
wrapt = "1.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
